<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mute_button"
        android:title="@string/mute"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_microphone"/>

    <item
        android:id="@+id/menu_deafen_button"
        android:title="@string/deafen"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_audio"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_action_search"/>

    <item
        android:id="@+id/menu_bluetooth"
        android:title="@string/bluetooth"
        android:checkable="true"
        app:showAsAction="never"/>

</menu>